[build-system]
requires = ["setuptools>=61.0", "Jinja2>=3.1.0", "docstring_parser>=0.15"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-doc"
version = "0.1.5"
dependencies = [
  "Jinja2>=3.1.0",
  "docstring_parser>=0.15"
]
authors = [
  { name="Hiran Hasanka", email="hiranhasanka@gmail.com" },
]
description = "A package to create documentation for functions in Databricks notebooks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/theSLWayne/notebook-doc"
"Bug Tracker" = "https://github.com/theSLWayne/notebook-doc/issues"

[tool.bumpver]
current_version = "0.1.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/__init__.py" = ["{version}"]
"src/notebook_doc/__init__.py" = ["{version}"]